--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -1,26 +1,24 @@
 <section class="container criar-pensamentos ff-inter">
   <header class="header">
-    <h2>Adicione um <br>pensamento novo:</h2>
+    <h2>Adicione um <br />pensamento novo:</h2>
   </header>
-  <form>
+  <form [formGroup]="fomulario">
     <label for="pensamento">Pensamento</label>
     <input
       type="textarea"
       class="input"
       id="pensamento"
-      name="pensamento"
+      formControlName="conteudo"
       placeholder="Digite o pensamento"
-      [(ngModel)]="pensamento.conteudo"
-    >
+    />
     <label for="autoria">Autoria ou fonte</label>
     <input
       type="text"
       class="input"
       id="autoria"
-      name="autoria"
+      formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
-      [(ngModel)]="pensamento.autoria"
-    >
+    />
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
@@ -29,9 +27,8 @@
             type="radio"
             id="modelo1"
             value="modelo1"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
-          >
+            formControlName="modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -39,9 +36,11 @@
         </label>
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis" />
+          <p class="conteudo">{{fomulario.get('conteudo')?.value}}</p>
+          <p class="autoria">
+            <b>{{fomulario.get('autoria')?.value}}</b>
+          </p>
         </div>
       </div>
 
@@ -51,9 +50,8 @@
             type="radio"
             id="modelo2"
             value="modelo2"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
-          >
+            formControlName="modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -61,9 +59,14 @@
         </label>
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <img
+            src="../../../../assets/imagens/modelo2.png"
+            alt="Aspas azul claro"
+          />
+          <p class="conteudo">{{fomulario.get('conteudo')?.value}}</p>
+          <p class="autoria">
+            <b>{{fomulario.get('autoria')?.value}}</b>
+          </p>
         </div>
       </div>
 
@@ -73,9 +76,8 @@
             type="radio"
             id="modelo3"
             value="modelo3"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
-          >
+            formControlName="modelo"
+          />
           <div class="custom-radio">
             <span></span>
           </div>
@@ -83,15 +85,22 @@
         </label>
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
-          <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
-          <p class="conteudo">{{ pensamento.conteudo }}</p>
-          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+          <img
+            src="../../../../assets/imagens/modelo3.png"
+            alt="Aspas verdes"
+          />
+          <p class="conteudo">{{fomulario.get('conteudo')?.value}}</p>
+          <p class="autoria">
+            <b>{{fomulario.get('autoria')?.value}}</b>
+          </p>
         </div>
       </div>
     </div>
     <div class="acoes">
-      <button type="button" (click)="criarPensamento()" class="botao">Salvar</button>
-      <button type="button" (click)="cancelar()"  class="botao">Cancelar</button>
+      <button type="button" (click)="criarPensamento()" class="botao">
+        Salvar
+      </button>
+      <button type="button" (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
