--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -106,7 +106,11 @@
       </div>
     </div>
     <div class="acoes">
-      <button type="button" (click)="criarPensamento()" class="botao">
+      <button
+      [disabled]="!fomulario.valid"
+      type="button"
+      (click)="criarPensamento()">
+      [ngClass]="habilitarBotao()"
         Salvar
       </button>
       <button type="button" (click)="cancelar()" class="botao">Cancelar</button>
