--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -109,9 +109,9 @@
       <button
       [disabled]="!fomulario.valid"
       type="button"
-      (click)="criarPensamento()">
+      (click)="criarPensamento()"
       [ngClass]="habilitarBotao()"
-        Salvar
+        >Salvar
       </button>
       <button type="button" (click)="cancelar()" class="botao">Cancelar</button>
     </div>
